--- a/index.html
+++ b/index.html
@@ -1,2 +1,23 @@
 <html>
+    <meta charset="UTF-8">
+
+    <style>
+
+    body {
+      margin: 1in;
+      font-family: 'Futura', sans-serif;
+    }
+
+    </style>
+
+<body>
+    <h1>Project 1</h1>
+    <h3>Sydney Bednar, Noorejehan Umar, Victoria Eshun</h3>
+    <p>Color Palette</p>
+    <p style="color: #ff0050">PINK</p>
+    <p style="color: #00f2ea">AQUA</p>
+    <p>BLACK</p>
+    <img src='palette.png' width=300 height=300 />
+
+</body>
 </html>
